--- a/final-project/pages/admin.html
+++ b/final-project/pages/admin.html
@@ -23,7 +23,7 @@
         
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 mx-auto">
-                <div class="util-btns mr-5">
+                <div class="util-btns">
                     <button id="adminAdd"><i class="fas fa-plus fa-lg"></i>Add Product</button>
                     <button id="backToShop"><i class="fas fa-shopping-basket fa-lg"></i>Back to Shop</button>
                 </div>
