--- a/final-project/pages/cart.html
+++ b/final-project/pages/cart.html
@@ -41,9 +41,7 @@
                                 </div>
                             </li>
                             <li>
-                                <div id="cart"><i id="cartIcon" data-html=true data-toggle="popover"
-                                        data-content="hey kjbhgkdjfghkurfhkhgkrfhkfjhgkshfbkjsrhbfhdbfksdjbfhksuefhey"
-                                        class="fas fa-shopping-cart fa-lg my-auto"></i><span class="px-auto"
+                                <div id="cart"><i id="cartIcon" class="fas fa-shopping-cart fa-lg my-auto"></i><span class="px-auto"
                                         id="counter"></span>
                                 </div>
                             </li>
