--- a/final-project/pages/details.html
+++ b/final-project/pages/details.html
@@ -41,12 +41,12 @@
 
                         <div class="menu-btns">
                             <li><div id="admin">
-                                <i id="adminIcon" class="fas fa-user-shield fa-lg my-auto" href="cart.html"></i>
+                                <i id="adminIcon" class="fas fa-user-shield my-auto" href="cart.html"></i>
                             </div></li>
                             <li>
                                 <div id="cart"><i id="cartIcon" data-html=true data-toggle="popover"
                                         data-content="hey kjbhgkdjfghkurfhkhgkrfhkfjhgkshfbkjsrhbfhdbfksdjbfhksuefhey"
-                                        class="fas fa-shopping-cart fa-lg my-auto"></i><span id="counter"></span>
+                                        class="fas fa-shopping-cart my-auto"></i><span id="counter"></span>
                                 </div>
                             </li>
                         </div>
