--- a/final-project/pages/edit.html
+++ b/final-project/pages/edit.html
@@ -31,10 +31,9 @@
                     <form>
                         <label for="name">Name: </label>
                         <input class="form-control" type="text" id="name">
-                        <label for="image">Image URL: </label>
-                        <input class="form-control" type="text" id="image">
-                        <label for="image2">Image URL: </label>
-                        <input class="form-control" type="text" id="image2">
+                        <label for="images">Image URL: </label>
+                        <input class="form-control" type="text" id="images">
+                        
 
 
                         <label for="category">Category: </label>
