--- a/final-project/pages/details.html
+++ b/final-project/pages/details.html
@@ -25,28 +25,28 @@
     <title>Product Details</title>
 </head>
 
-<body class="loading-gif">
-    <section >
+<body class="loading-gif" load = "true">
+    <section>
         <nav class="navigation">
             <div class="menu-list navigation" id="navbarNav">
                 <div>
 
                     <ul class="nav-list mt-2 ml-3">
-                        <li>
-                            <a class="nav-link mt-3" href="home.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li>
-                            <a class="nav-link mt-3" href="index.html">Shop</a>
+                        <li id="home">
+                            <i class=" fas fa-leaf fa-lg mt-4 mb-4 ml-5" href="index.html"> Shop</i>
                         </li>
 
+
                         <div class="menu-btns">
-                            <li><div id="admin">
-                                <i id="adminIcon" class="fas fa-user-shield my-auto" href="cart.html"></i>
-                            </div></li>
+                            <li>
+                                <div id="admin">
+                                    <i id="adminIcon" class="fas fa-user-shield fa-lg my-auto" href="cart.html"></i>
+                                </div>
+                            </li>
                             <li>
                                 <div id="cart"><i id="cartIcon" data-html=true data-toggle="popover"
                                         data-content="hey kjbhgkdjfghkurfhkhgkrfhkfjhgkshfbkjsrhbfhdbfksdjbfhksuefhey"
-                                        class="fas fa-shopping-cart my-auto"></i><span id="counter"></span>
+                                        class="fas fa-shopping-cart fa-lg my-auto"></i><span id="counter"></span>
                                 </div>
                             </li>
                         </div>
