--- a/final-project/pages/edit.html
+++ b/final-project/pages/edit.html
@@ -31,7 +31,7 @@
                     <form>
                         <label for="name">Name: </label>
                         <input class="form-control" type="text" id="name">
-                        <label for="images">Image URL: </label>
+                        <label for="images">Images: </label>
                         <input class="form-control" type="text" id="images">
                         
 
