--- a/final-project/pages/index.html
+++ b/final-project/pages/index.html
@@ -21,31 +21,30 @@
     <title>Buy CBD Products Now</title>
 </head>
 
-<body>
+<body load="true">
     <section>
-        <nav class="navigation">
+        <nav class="navigation ">
             <div class="menu-list navigation" id="navbarNav">
                 <div>
 
                     <ul class="nav-list mt-2 ml-3">
-                        <li>
+                        <!-- <li>
                             <a class="nav-link mt-3" href="home.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li>
-                            <a class="nav-link mt-3" href="index.html">Shop</a>
+                        </li> -->
+                        <li id="home">
+                            <i class=" fas fa-leaf fa-lg mt-4 mb-4 ml-5"  href="index.html"> Shop</i>
                         </li>
                         <li></li>
 
-                        <div class="menu-btns">
+                        <div class="menu-btns mb-3">
                             <li>
                                 <div id="admin">
                                     <i id="adminIcon" class="fas fa-user-shield fa-lg my-auto" href="cart.html"></i>
                                 </div>
                             </li>
                             <li>
-                                <div id="cart"><i id="cartIcon" data-html=true data-toggle="popover"
-                                        data-content="hey kjbhgkdjfghkurfhkhgkrfhkfjhgkshfbkjsrhbfhdbfksdjbfhksuefhey"
-                                        class="fas fa-shopping-cart fa-lg my-auto"></i><span id="counter"></span>
+                                <div id="cart"><i id="cartIcon" class="fas fa-shopping-cart fa-lg my-auto"></i><span
+                                        id="counter"></span>
                                 </div>
                             </li>
                         </div>
@@ -61,13 +60,13 @@
 
     <section>
         <div class="container">
-            <div class="mb-5 title">
+            <div class="mb-5 mt-5 title">
                 <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 col-lg-6">
                         <h1 class="mt-5">CBD Products</h1>
                         <hr>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 mx-auto">
+                    <div class=" col-6 col-sm-6 col-md-6 col-lg-6 mx-auto">
                         <input id="search-input" placeholder="Search..." type="text">
                     </div>
                 </div>
@@ -77,6 +76,9 @@
 
             </div>
         </div>
+        <button id="scrollTop">
+
+        </button>
         <section>
             <div class="row">
                 <div class="footer">
