--- a/final-project/pages/index.html
+++ b/final-project/pages/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link mt-3" href="home.html">Home <span class="sr-only">(current)</span></a>
                         </li> -->
                         <li id="home">
-                            <i class=" fas fa-leaf fa-lg mt-4 mb-4 ml-5"  href="index.html"> Shop</i>
+                            <i class=" fas fa-leaf fa-lg mt-4 mb-4 ml-5" href="index.html"> Shop</i>
                         </li>
                         <li></li>
 
@@ -77,7 +77,7 @@
             </div>
         </div>
         <button id="scrollTop">
-
+            <i class="fas fa-chevron-up"></i>
         </button>
         <section>
             <div class="row">
