--- a/final-project/pages/details.html
+++ b/final-project/pages/details.html
@@ -13,19 +13,22 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
+    <link rel="stylesheet" href="../css/alertify.min.css" />
+    <link rel="stylesheet" href="../themes/bootstrap.min.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9bca85d03b.js"></script>
+    <script src="../js//alertify.min.js"></script>
     <link rel="stylesheet" href="../css/details.css">
     <link rel="stylesheet" href="../css/responsive-details.css">
 
     <title>Product Details</title>
 </head>
 
-<body class="loading-gif" load = "true">
+<body class="loading-gif" load="true">
     <section>
         <nav class="navigation">
             <div class="menu-list navigation" id="navbarNav">
