--- a/final-project/pages/admin.html
+++ b/final-project/pages/admin.html
@@ -13,7 +13,7 @@
     <title>CBD Admin</title>
 </head>
 
-<body>
+<body  load="true">
     <div class="container">
         <!-- <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 mx-auto ">
