--- a/final-project/pages/index.html
+++ b/final-project/pages/index.html
@@ -15,13 +15,10 @@
     <link rel="stylesheet" href="../css/responsive-main.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
     <title>Buy CBD Products Now</title>
 </head>
 
-<body load="true">
+<body>
     <section>
         <nav class="navigation ">
             <div class="menu-list navigation" id="navbarNav">
